Let's agree to the disagree. We'll map 3rd party controls to our own classes therefore having the ability to declare XML to CRL mapping. Cleaner xaml without the prefixes.

--- a/Framework/Avalonia/Avalonia.csproj
+++ b/Framework/Avalonia/Avalonia.csproj
@@ -14,14 +14,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\UI\Avalonia.Controls\Avalonia.Controls.csproj" />
     <ProjectReference Include="..\..\UI\Avalonia\Avalonia.csproj" />
     <ProjectReference Include="..\Core\Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="FluentAvalonia">
-      <HintPath>References\FluentAvalonia.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
