--- a/App/WeddingBuilder/Builder.csproj
+++ b/App/WeddingBuilder/Builder.csproj
@@ -10,27 +10,18 @@
 		<None Remove=".gitignore" />
 	</ItemGroup>
 	<ItemGroup>
-		<TrimmableAssembly Include="Avalonia.Themes.Fluent" />
-		<TrimmableAssembly Include="Avalonia.Themes.Default" />
-	</ItemGroup>
-	<ItemGroup>
 		<PackageReference Include="Avalonia" Version="11.0.0-preview3" />
 		<PackageReference Include="Avalonia.Desktop" Version="11.0.0-preview3" />
 		<PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.0-preview3" />
-		<PackageReference Include="Avalonia.Themes.Fluent" Version="11.0.0-preview3" />
 		<PackageReference Include="PropertyChanged.Fody" Version="4.0.5" />
 		<PackageReference Include="XamlNameReferenceGenerator" Version="1.3.4" />
+		<PackageReference Include="FluentAvaloniaUI" Version="2.0.0-preview3" />
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\..\Framework\Avalonia\Avalonia.csproj" />
 		<ProjectReference Include="..\..\UI\Avalonia.Controls\Avalonia.Controls.csproj" />
 		<ProjectReference Include="..\..\UI\Avalonia\Avalonia.csproj" />
 		<ProjectReference Include="..\..\UI\UI\UI.csproj" />
-	</ItemGroup>
-	<ItemGroup>
-	  <Reference Include="FluentAvalonia">
-	    <HintPath>..\..\Framework\Avalonia\References\FluentAvalonia.dll</HintPath>
-	  </Reference>
 	</ItemGroup>
 	<ItemGroup>
 	  <Compile Update="Views\StartProjectConfigurationView.axaml.cs">
