--- a/Framework/Avalonia/Avalonia.csproj
+++ b/Framework/Avalonia/Avalonia.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -10,7 +10,6 @@
 
   <ItemGroup>
     <PackageReference Include="Avalonia" Version="11.0.0-preview3" />
-    <PackageReference Include="MicroCom.Runtime" Version="0.10.5" />
   </ItemGroup>
 
   <ItemGroup>
