--- a/UI/Avalonia/Avalonia.csproj
+++ b/UI/Avalonia/Avalonia.csproj
@@ -8,6 +8,7 @@
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Avalonia" Version="11.0.0-preview3" />
+		<PackageReference Include="FluentAvaloniaUI" Version="2.0.0-preview3" />
 	</ItemGroup>
 	<ItemGroup>
 	  <ProjectReference Include="..\UI\UI.csproj" />
